# antsxmm

./: .gitignore  README.md  pyproject.toml
antsxmm/: __init__.py  _version.py  bids.py  core.py  pipeline.py
docs/: antsxmm.html  index.html  search.js
tests/: conftest.py  test_bids.py  test_core.py  test_coverage_gap.py  test_pipeline.py  test_version.py  test_workflow.py
